--- a/FIPS/fip-0004.md
+++ b/FIPS/fip-0004.md
@@ -5,7 +5,7 @@ author: static-clouds
 status: Draft
 type: Chaos
 created: 2023-10-19
-discussion: https://github.com/rjwebb/proposals/discussions/4
+discussions-to: https://github.com/rjwebb/proposals/discussions/4
 ---
 
 ## It's time!
